# seo-audit-plugin

./: .env.example  .gitignore  CLAUDE.md  README.md  install.sh  package-plugin.sh  project_instructions.md  publish.sh  pyproject.toml  run_full_audit.py  seo-audit.plugin  setup.sh
.github/workflows/: publish.yml
cowork-plugin/: .mcp.json  README.md
cowork-plugin/skills/onpage/: SKILL.md
mcp_server/: __main__.py  install.py  requirements.txt  server.py
mcp_server/analyzer/: scorer.py
mcp_server/checklist/: technical.py  ui.py
mcp_server/plugin_data/claude_plugin/: plugin.json
mcp_server/plugin_data/skills/onpage/: SKILL.md
mcp_server/templates/: report_template.md
mcp_server/tools/: crawler.py  file_parsers.py  pagespeed.py  technical_checks.py
