[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "seo-audit-mcp"
version = "1.0.0"
description = "MCP server for SEO auditing — 105+ criteria Technical + UI analysis for Claude Desktop"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Minh", email = "minhdo01011990@gmail.com" }]
keywords = ["seo", "audit", "mcp", "claude", "technical-seo", "pagespeed", "crawl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
seo-audit-mcp = "mcp_server.server:cli"

[project.urls]
Homepage = "https://github.com/minhdo01011990-glitch/seo-audit-plugin"
Repository = "https://github.com/minhdo01011990-glitch/seo-audit-plugin"
Issues = "https://github.com/minhdo01011990-glitch/seo-audit-plugin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]

[tool.setuptools.package-data]
"mcp_server" = ["templates/*.md"]
